--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ flask = "^3.0.3"
 flask-sqlalchemy = "^3.1.1"
 ariadne = "^0.4.0"
 psycopg2 = "^2.9.9"
+jupyter = "^1.0.0"
+numpy = "^1.26.4"
+pandas = "^2.2.2"
+openpyxl = "^3.1.2"
+pulp = "^2.8.0"
 
 [build-system]
 requires = ["poetry-core"]
